more styling for legs

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </div>
       <div class="grid-chest-wrapper"><div class="empty"></div><a href="https://www.amazon.com" target="_blank" class="grid-chest"></a><div class="empty"></div></div>
       <div class="grid-abs-wrapper"><div class="empty"></div><a href="https://www.twitter.com/" target="_blank" class="grid-abs"></a><div class="empty"></div></div>
-      <a href="https://www.netflix.com" target="_blank" class="grid-legs"></a>
+      <div class="grid-legs-wrapper"><div class="empty"></div><a href="https://www.netflix.com" target="_blank" class="grid-legs"></a><div class="empty-2"></div></div>
     </div>
   </div>
 </body>
