Empty divs next to arms

--- a/index.html
+++ b/index.html
@@ -14,12 +14,18 @@
     <img src="./assets/legs.png" class="body-part body-part-part" id="legs" alt="">
     <div class="grid-wrapper">
       <div class="grid-upper">
-        <a href="https://www.google.com" target="_blank" class="grid-arms"></a>
+        <div class="arms-wrapper">
+          <div class="empty"></div>
+          <a href="https://www.google.com" target="_blank" class="grid-arms"></a>
+        </div>
         <div class="head-shoulders">
           <div class="grid-head"></div>
           <a href="https://www.facebook.com" target="_blank" class="grid-shoulders"></a>
         </div>
-        <a href="https://www.google.com" target="_blank" class="grid-arms2"></a>
+        <div class="arms-wrapper">
+          <a href="https://www.google.com" target="_blank" class="grid-arms2"></a>
+          <div class="empty"></div>
+        </div>
       </div>
       <div class="grid-chest-wrapper"><div class="empty"></div><a href="https://www.amazon.com" target="_blank" class="grid-chest"></a><div class="empty"></div></div>
       <div class="grid-abs-wrapper"><div class="empty"></div><a href="https://www.twitter.com/" target="_blank" class="grid-abs"></a><div class="empty"></div></div>
